Try downloading multiple models

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -77,14 +77,13 @@
       },
       "outputs": [],
       "source": [
-        "#@title Normal 1.4 model\n",
-        "model_url = https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt\n",
-        "# model_url = https://huggingface.co/nitrosocke/mo-di-diffusion/blob/main/moDi-v1-pruned.ckpt\n",
-        "\n",
         "# get a token from https://huggingface.co/settings/tokens\n",
         "user_token = \"\" #@param {type:\"string\"}\n",
         "user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
-        "!wget --header={user_header} {model_url} -O /content/stable-diffusion-webui/model.ckpt"
+        "\n",
+        "# %cd /content/stable-diffusion-webui\n",
+        "!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt -O /content/stable-diffusion-webui/v1.4.ckpt\n",
+        "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O /content/stable-diffusion-webui/disney.ckpt"
       ]
     },
     {
