Clean up notebook, add more models

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -80,10 +80,13 @@
         "# get a token from https://huggingface.co/settings/tokens\n",
         "user_token = \"\" #@param {type:\"string\"}\n",
         "user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
+        "models_dir = '/content/stable-diffusion-webui/models/Stable-diffusion'\n",
         "\n",
         "# %cd /content/stable-diffusion-webui\n",
-        "!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt -O /content/stable-diffusion-webui/v1.4.ckpt\n",
-        "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O /content/stable-diffusion-webui/disney.ckpt"
+        "!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt -O {models_dir}/v1.4.ckpt\n",
+        "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O \"{models_dir}/modern disney.ckpt\"\n",
+        "!wget --header={user_header} https://huggingface.co/IShallRiseAgain/StudioGhibli/resolve/main/StudioGhibliV4.ckpt -O {models_dir}/studio_ghibli_anime_style.ckpt\n",
+        "!wget --header={user_header} https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/trinart_characters_it4_v1.ckpt -O {models_dir}/trinart.ckpt"
       ]
     },
     {
@@ -131,7 +134,6 @@
       },
       "outputs": [],
       "source": [
-        "%cd stable-diffusion-webui\n",
         "!git pull"
       ]
     },
@@ -161,65 +163,10 @@
       },
       "outputs": [],
       "source": [
-        "!COMMANDLINE_ARGS=\"--share --gradio-debug --gradio-auth me:qwerty\" REQS_FILE=\"requirements.txt\" python launch.py"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9qrpRUJpno7L"
-      },
-      "source": [
-        "commands for ***after*** you have gotten done with a session\n",
-        "============================================================================"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zB-L8JpElKp-"
-      },
-      "source": [
-        "Zip images for downloading on local drive (click the folder icon on the left, the one below {x})"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gBt5g_Dn0NFo"
-      },
-      "outputs": [],
-      "source": [
-        "!zip -r /content/stable-diffusion-webui /content/stable-diffusion-webui/outputs "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "odNn2KF5lFmb"
-      },
-      "source": [
-        "Save images to Google Drive **Warning: this will cause google to scan your drive, so if you intend to use this and worry about that kind of stuff, probablly just set this up on a clean account that's just for this colab**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zNEgJfbhDwI6"
-      },
-      "outputs": [],
-      "source": [
-        "from google.colab import drive # type: ignore\n",
+        "username = \"pickleman\" #@param {type:\"string\"}\n",
+        "password = \"please change me\" #@param {type:\"string\"}\n",
         "\n",
-        "try:\n",
-        "   drive_path = \"/content/drive\"\n",
-        "   drive.mount(drive_path,force_remount=False)\n",
-        "except:\n",
-        "   print(\"...error mounting drive or with drive path variables\")\n",
-        "\n",
-        "!cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive\""
+        "!COMMANDLINE_ARGS=\"--share --gradio-debug --gradio-auth {username}:{password}\" REQS_FILE=\"requirements.txt\" python launch.py"
       ]
     }
   ],
