Clean up notebook, add plugin

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -20,18 +20,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "p8FI40sFj9tU"
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "os.kill(os.getpid(), 9) # This will crash Colab (required, everything will still be intact so dont worry)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OHCtG9MT0jLq"
@@ -53,6 +41,8 @@
       "outputs": [],
       "source": [
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser.git stable-diffusion-webui/extensions/images-browser\n",
+        "\n",
         "%cd stable-diffusion-webui"
       ]
     },
@@ -62,7 +52,7 @@
         "id": "F0EINk5M0s-w"
       },
       "source": [
-        "Download the model from huggingface. See link at the start for different ways."
+        "Download the models from huggingface."
       ]
     },
     {
@@ -95,7 +85,7 @@
         "id": "v2kY0Z05DwIN"
       },
       "source": [
-        "Voldy doesn't explian what this does but it appears to replace the prior dependencies section, saving a few lines lmao "
+        "Need to see why they did this originally:"
       ]
     },
     {
