--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -40,8 +40,14 @@
       },
       "outputs": [],
       "source": [
+        "# Pull down the webui\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser.git stable-diffusion-webui/extensions/images-browser\n",
+        "\n",
+        "# Pull down some extensions\n",
+        "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser stable-diffusion-webui/extensions/images-browser\n",
+        "!git clone https://github.com/yfszzx/stable-diffusion-webui-inspiration stable-diffusion-webui/extensions/inspiration\n",
+        "!git clone https://github.com/camenduru/stable-diffusion-webui-artists-to-study stable-diffusion-webui/extensions/artists-to-study\n",
+        "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-tokenizer stable-diffusion-webui/extensions/tokenizer\n",
         "\n",
         "%cd stable-diffusion-webui"
       ]
@@ -67,16 +73,19 @@
       },
       "outputs": [],
       "source": [
-        "# get a token from https://huggingface.co/settings/tokens\n",
+        "# Get a token from https://huggingface.co/settings/tokens\n",
         "user_token = \"\" #@param {type:\"string\"}\n",
         "user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
         "models_dir = '/content/stable-diffusion-webui/models/Stable-diffusion'\n",
+        "embeddings_dir = '/content/stable-diffusion-webui/embeddings'\n",
         "\n",
-        "# %cd /content/stable-diffusion-webui\n",
+        "# Download models\n",
         "!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt -O {models_dir}/v1.4.ckpt\n",
         "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O \"{models_dir}/modern disney.ckpt\"\n",
         "!wget --header={user_header} https://huggingface.co/IShallRiseAgain/StudioGhibli/resolve/main/StudioGhibliV4.ckpt -O {models_dir}/studio_ghibli_anime_style.ckpt\n",
-        "!wget --header={user_header} https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/trinart_characters_it4_v1.ckpt -O {models_dir}/trinart.ckpt"
+        "!wget --header={user_header} https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/trinart_characters_it4_v1.ckpt -O {models_dir}/trinart.ckpt\n",
+        "\n",
+        "!wget https://huggingface.co/sd-concepts-library/irasutoya/resolve/main/learned_embeds.bin -O {embeddings_dir}/irasutoya.bin"
       ]
     },
     {
@@ -106,30 +115,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S8nvm5f6AfaL"
-      },
-      "source": [
-        "Change into Web UI directory and download updates"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I1j4j2NfAQye",
-        "outputId": "dbc529a3-3359-40b5-fa5f-593d898475b6"
-      },
-      "outputs": [],
-      "source": [
-        "!git pull"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "xt8lbdmC04ox"
       },
       "source": [
@@ -153,10 +138,11 @@
       },
       "outputs": [],
       "source": [
-        "username = \"pickleman\" #@param {type:\"string\"}\n",
-        "password = \"please change me\" #@param {type:\"string\"}\n",
+        "username = \"\" #@param {type:\"string\"}\n",
+        "password = \"\" #@param {type:\"string\"}\n",
+        "ngrok_token = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "!COMMANDLINE_ARGS=\"--share --gradio-debug --gradio-auth {username}:{password}\" REQS_FILE=\"requirements.txt\" python launch.py"
+        "!COMMANDLINE_ARGS=\"--ngrok {ngrok_token} --gradio-debug --gradio-auth {username}:{password} --gradio-img2img-tool color-sketch\" REQS_FILE=\"requirements.txt\" python launch.py"
       ]
     }
   ],
