Add PaperCut model

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -84,6 +84,7 @@
         "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O \"{models_dir}/modern disney.ckpt\"\n",
         "!wget --header={user_header} https://huggingface.co/IShallRiseAgain/StudioGhibli/resolve/main/StudioGhibliV4.ckpt -O {models_dir}/studio_ghibli_anime_style.ckpt\n",
         "!wget --header={user_header} https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/trinart_characters_it4_v1.ckpt -O {models_dir}/trinart.ckpt\n",
+        "!wget --header={user_header} https://huggingface.co/Fictiverse/Stable_Diffusion_PaperCut_Model/resolve/main/PaperCut_v1.ckpt -O {models_dir}/PaperCut.ckpt\n",
         "\n",
         "!wget https://huggingface.co/sd-concepts-library/irasutoya/resolve/main/learned_embeds.bin -O {embeddings_dir}/irasutoya.bin"
       ]
