Add stable diffusion 1.5

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -80,6 +80,7 @@
         "embeddings_dir = '/content/stable-diffusion-webui/embeddings'\n",
         "\n",
         "# Download models\n",
+        "!wget --header={user_header} https://huggingface.co/runwayml/stable-diffusion-v1-5/resolve/main/v1-5-pruned-emaonly.ckpt -O {models_dir}/v1.5.ckpt\n",
         "!wget --header={user_header} https://huggingface.co/CompVis/stable-diffusion-v-1-4-original/resolve/main/sd-v1-4.ckpt -O {models_dir}/v1.4.ckpt\n",
         "!wget --header={user_header} https://huggingface.co/nitrosocke/mo-di-diffusion/resolve/main/moDi-v1-pruned.ckpt -O \"{models_dir}/modern disney.ckpt\"\n",
         "!wget --header={user_header} https://huggingface.co/IShallRiseAgain/StudioGhibli/resolve/main/StudioGhibliV4.ckpt -O {models_dir}/studio_ghibli_anime_style.ckpt\n",
