Add extension: aesthetic-gradients

--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -46,6 +46,7 @@
         "# Pull down some extensions\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser stable-diffusion-webui/extensions/images-browser\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-tokenizer stable-diffusion-webui/extensions/tokenizer\n",
+        "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-aesthetic-gradients stable-diffusion-webui/extensions/aesthetic-gradients\n",
         "\n",
         "%cd stable-diffusion-webui"
       ]
