--- a/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
+++ b/stable-diffusion/StableDiffusionUI_Voldemort_V1_2.ipynb
@@ -141,9 +141,8 @@
       "source": [
         "username = \"\" #@param {type:\"string\"}\n",
         "password = \"\" #@param {type:\"string\"}\n",
-        "ngrok_token = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "!COMMANDLINE_ARGS=\"--ngrok {ngrok_token} --gradio-debug --gradio-auth {username}:{password} --gradio-img2img-tool color-sketch\" REQS_FILE=\"requirements.txt\" python launch.py"
+        "!COMMANDLINE_ARGS=\"--share --gradio-debug --gradio-auth {username}:{password} --gradio-img2img-tool color-sketch\" REQS_FILE=\"requirements.txt\" python launch.py"
       ]
     }
   ],
