--- a/stable-diffusion/stable-diffusion-webui.ipynb
+++ b/stable-diffusion/stable-diffusion-webui.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dbirks/ml-notebooks/blob/main/StableDiffusionUI_Voldemort_V1_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dbirks/ml-notebooks/blob/main/stable-diffusion/stable-diffusion-webui.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,16 +16,7 @@
         "id": "gfKvWAVnz8OB"
       },
       "source": [
-        "Adapted from: https://colab.research.google.com/drive/1AfAmwLMd_Vx33O9IwY2TmO9wKZ8ABRRa"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OHCtG9MT0jLq"
-      },
-      "source": [
-        "Clone webui repository"
+        "Adapted from a notebook in the stable-diffusion-webui wiki: https://github.com/AUTOMATIC1111/stable-diffusion-webui/wiki/Online-Services"
       ]
     },
     {
@@ -40,10 +31,10 @@
       },
       "outputs": [],
       "source": [
-        "# Pull down the webui\n",
+        "# Clone the webui repo\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "\n",
-        "# Pull down some extensions\n",
+        "# Clone some extensions\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser stable-diffusion-webui/extensions/images-browser\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-tokenizer stable-diffusion-webui/extensions/tokenizer\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-aesthetic-gradients stable-diffusion-webui/extensions/aesthetic-gradients\n",
@@ -57,7 +48,7 @@
         "id": "F0EINk5M0s-w"
       },
       "source": [
-        "Download the models from huggingface."
+        "Download some models from huggingface:"
       ]
     },
     {
@@ -86,6 +77,7 @@
         "!wget --header={user_header} https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/trinart_characters_it4_v1.ckpt -O {models_dir}/trinart.ckpt\n",
         "!wget --header={user_header} https://huggingface.co/Fictiverse/Stable_Diffusion_PaperCut_Model/resolve/main/PaperCut_v1.ckpt -O {models_dir}/PaperCut.ckpt\n",
         "\n",
+        "# Download embeddings\n",
         "!wget https://huggingface.co/sd-concepts-library/irasutoya/resolve/main/learned_embeds.bin -O {embeddings_dir}/irasutoya.bin"
       ]
     },
@@ -119,7 +111,7 @@
         "id": "xt8lbdmC04ox"
       },
       "source": [
-        "Launch web ui. You will get a link to nnn.gradio.app, follow it.\n",
+        "Now we can launch the UI. You will get a link to xxxxx.gradio.app which you can follow to access it.\n",
         "\n",
         "Commandline arguments are:\n",
         "  - `--share` - create online gradio.app link\n",
@@ -157,11 +149,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.7 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "69712e5f5cc18cdb93e82f18d7bfde9a47d7138efae1f4b87f8f55069ac86612"
+      }
     }
   },
   "nbformat": 4,
